# Cloth

./: .editorconfig  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cloth.slnx  GOVERNANCE.md  LICENSE.md  Net11.upgrade.json  README.md  SECURITY.md  Test.co  final_string_test.co  test.json
Assembly/: hello.asm
Cloth/: Cloth.csproj  Start.cs
Cloth/File/: ClothFile.cs
Cloth/Lexer/: LexError.cs  (+1 more)
Commands/: Cleanup.fs  Commands.fs  Commands.fsproj  DispatchResult.fs  Flags.fs
Compiler/: BuildConfig.cs  Compiler.cs  Compiler.csproj  Compiler.vcxitems
Demo Project/: build.toml
Frontend/: Frontend.csproj  HelloWorld.co  Program.cs
Writerside/: c.tree  d.tree  redirection-rules.xml  writerside.cfg
docs/: Numeric-Types.md  RFC_PROCESS.md
loom-compiler/: CMakeLists.txt  README.md  build.gradle  dune-project  hello_world.c  llvm_test.c  loom-compiler.opam
loom-compiler-old/: settings.gradle
loom-compiler/example/: Aliasing.lm  BinaryLiterals.lm  Bytes.lm  Strings.lm  SyntaxDefinitions.lm  TestIdentifier.lm
loom-compiler/include/: main.hpp
loom-compiler/include/lexer/: Lexer.hpp
loom-compiler/include/token/: Token.hpp
loom-compiler/include/tokens/: Token.hpp  TokenSpan.hpp
loom-compiler/lib/: Keywords.ml  Lexer.ml  Loom_error.ml  Position.ml  Result.ml  Span.ml  Token.ml  TokenType.ml  dune
loom-compiler/src/: main.cpp
loom-compiler/src/lexer/: Lexer.cpp
loom-compiler/src/main/java/loom/compiler/ast/: Expr.java  Stmt.java
loom-compiler/src/main/java/loom/compiler/ast/declarations/: EnumDecl.java
loom-compiler/src/main/java/loom/compiler/ast/expressions/: AssignExpr.java  BinaryExpr.java  CallExpr.java  ProjectedEnumExpr.java
loom-compiler/src/main/java/loom/compiler/ast/statements/: BreakStmt.java  ContinueStmt.java
loom-compiler/src/main/java/loom/compiler/lexer/: Lexer.java
loom-compiler/src/main/java/loom/compiler/parser/: Parser.java  TypeChecker.java
loom-compiler/src/main/java/loom/compiler/parser/objects/: ClassParser.java  ConstructorParser.java  LoopStatementParser.java  StatementParser.java
loom-compiler/src/main/java/loom/compiler/semantic/: DeclarationCollector.java  ImportResolver.java  SemanticAnalyzer.java  SymbolCollector.java  SymbolTable.java
loom-compiler/src/main/java/loom/compiler/token/: Keywords.java  TokenSpan.java  TokenType.java
loom-compiler/src/tokens/: Token.cpp  TokenSpan.cpp
loom-compiler/std/: strings.lm
loom-compiler/test/: dune  test_loom_compiler.ml
loom-compiler/tests/: access_control_test.lm  complex_import_test.lm  comprehensive_two_pass.lm  comprehensive_type_widening.lm  comprehensive_value_semantics.lm  debug_struct_parse.lm  debug_test.lm  enum_parsing_test.lm  enum_validation_test.lm  final_import_test.lm  import_error_test.lm  import_test.lm  isolated_import_test.lm  new_struct_syntax.lm  simple_class_test.lm  simple_expr_test.lm  simple_import_test.lm  struct_expr_test.lm  struct_field_access_test.lm  struct_usage.lm  struct_vs_enum.lm  test.lm  test_method_resolution.lm  two_pass_demo.lm  working_two_pass.lm
loom-vm/: Cargo.toml  README.md
loom-vm/src/: bytecode.rs  error.rs  main.rs  runtime.rs  vm.rs
loom-vm/src/memory/: allocator.rs  mod.rs  profiler.rs  smart_pointer.rs
loomc/: CMakeLists.txt  README.md  dune-project  loomc.opam
loomc/include/: common.h
loomc/include/chunk/: chunk.h
loomc/include/debug/: debug.h
loomc/include/memory/: memory.h
loomc/include/value/: value.h
loomc/include/vm/: vm.h
loomc/lib/: ast_declarations.ml  ast_declarations.mli  ast_expressions.ml  ast_expressions.mli  ast_node.ml  ast_node.mli  ast_statements.ml  ast_statements.mli  dune  expression_parser.ml  expression_parser.mli  keywords.ml  keywords.mli  lexer.ml  lexer.mli  parser.ml  parser.mli  parser_core.ml  parser_core.mli  statement_parser.ml  statement_parser.mli  token.ml  token.mli  token_span.ml  token_span.mli  token_types.ml  token_types.mli
loomc/src/: main.cpp
loomc/src/chunk/: chunk.cpp
loomc/src/debug/: debug.cpp
loomc/src/memory/: memory.cpp
loomc/src/value/: value.cpp
loomc/src/vm/: vm.cpp
loomc/test/: dune
std/: io.lm  math.lm
tests/: advanced_enum_expressions.lm  correct_enum_test.lm  debug_parser.lm  debug_symbols.lm  enum_expression_test.lm  example.lm  inheritance_test.lm  multi_class_test.lm  protected_access_test.lm  scope_test.lm  simple_debug.lm  simple_multi_class.lm  simple_struct_test.lm  simple_two_pass.lm  struct_assignment_test.lm  struct_instantiation_test.lm  struct_test.lm  token_test.lm  two_pass_test.lm  type_widening_test.lm  value_semantics_test.lm
(+266 files in other folders)
