[package]
name = "loom-vm"
version = "0.1.0"
edition = "2021"
authors = ["Loom Team"]
description = "Virtual Machine for the Loom Programming Language"
license = "MIT"
repository = "https://github.com/loom-lang/loom"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Memory management
dashmap = "5.5"  # Concurrent HashMap
parking_lot = "0.12"  # Fast synchronization primitives

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Performance
rayon = "1.8"  # Parallel processing
criterion = { version = "0.5", optional = true }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Random number generation
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
