(lang dune 3.19)

(name loomc)

(generate_opam_files true)

(source
 (github SuperScary/Loom))

(authors "Loom Contributors")

(maintainers "Loom Steering Council")

(license MIT)

(documentation https://github.com/SuperScary/Loom/Wiki)

(package
 (name loomc)
 (synopsis "A general purpose, low level systems language.")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
