(library
 (name loom_compiler)
 (libraries 
  base
  stdio
  result
  fmt
  logs
  yojson
  ppx_deriving.runtime)
 (preprocess (pps ppx_deriving.show))
 (modules
  ; Core types and utilities
  Position
  Span
  Loom_error
  Result
  
  ; Token system
  Token
  TokenType
  Keywords
  
  ; Lexer
  Lexer)
 (wrapped false))
